WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118924
AX: VoiceOver not detecting misspelled words doesn't work in all cases
https://bugs.webkit.org/show_bug.cgi?id=118924
Summary
AX: VoiceOver not detecting misspelled words doesn't work in all cases
chris fleizach
Reported
2013-07-19 14:59:36 PDT
WebCore needs to update to use the NSAccessibilityMarkedMisspelledTextAttribute
Attachments
patch
(3.95 KB, patch)
2013-07-19 15:16 PDT
,
chris fleizach
buildbot
: commit-queue-
Details
Formatted Diff
Diff
patch
(4.35 KB, patch)
2013-07-19 15:27 PDT
,
chris fleizach
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-07-19 15:00:41 PDT
<
rdar://problem/14497952
>
chris fleizach
Comment 2
2013-07-19 15:16:07 PDT
Created
attachment 207152
[details]
patch
Build Bot
Comment 3
2013-07-19 15:18:39 PDT
Comment on
attachment 207152
[details]
patch
Attachment 207152
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/1134005
Build Bot
Comment 4
2013-07-19 15:21:20 PDT
Comment on
attachment 207152
[details]
patch
Attachment 207152
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/1132268
chris fleizach
Comment 5
2013-07-19 15:27:03 PDT
Created
attachment 207154
[details]
patch
Tim Horton
Comment 6
2013-07-19 17:11:43 PDT
Comment on
attachment 207154
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=207154&action=review
> Tools/ChangeLog:8 > + Make the misspelled detection dependent on both types of attributes to be present.
Grammar. s/to be/being/, I think.
> Tools/DumpRenderTree/mac/AccessibilityUIElementMac.mm:909 > +#if PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED > 1080
We almost universally use >= and the version that it was first introduced in. You should do the same.
> Tools/DumpRenderTree/mac/AccessibilityUIElementMac.mm:911 > + if (misspelled) > + misspelled = [[attrs objectForKey:NSAccessibilityMarkedMisspelledTextAttribute] boolValue];
This looks funny but is fine.
chris fleizach
Comment 7
2013-07-19 20:36:37 PDT
http://trac.webkit.org/changeset/152939
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug