AX: VoiceOver not detecting misspelled words don't work in all cases https://bugs.webkit.org/show_bug.cgi?id=118924

Reviewed by Tim Horton.

Source/WebCore:

VoiceOver is now looking for a new misspelled attribute.

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(AXAttributeStringSetSpelling):
(AXAttributedStringAppendText):

Tools:

Make the misspelled detection dependent on both types of attributes being present.

* DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::attributedStringRangeIsMisspelled):
* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::attributedStringRangeIsMisspelled):



Canonical link: https://commits.webkit.org/136781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152939 268f45cc-cd09-0410-ab3c-d52691b4dbfc